--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
   <ng-view></ng-view>
 
   <script src="assets/js/foundation.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>
   <script src="assets/js/app.js"></script>
 
   <script>
