Now creates and saves new ingredients

--- a/client/index.html
+++ b/client/index.html
@@ -19,12 +19,11 @@
 
   <ng-view></ng-view>
 
+  <action-bubble></action-bubble>
+
   <script src="assets/js/foundation.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>
   <script src="assets/js/app.js"></script>
 
-  <script>
-  </script>
 </body>
 
 </html>
