--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,10 @@
 
 <body class="grid-block vertical">
   <div class="grid-block shrink header low no-scale">
-    <h1 class="grid-content header-title">Trophy manager</h1>
+    <h1 class="grid-content header__title">Trophy manager</h1>
+    <input
+      class="header__search-bar search-bar"
+      ng-model="filter">
   </div>
 
   <ng-view></ng-view>
