--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <title>Trophy Manager for Dofus</title>
 
   <link rel="stylesheet" href="assets/css/app.css">
-
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
   <!--script src="assets/scripts/vendor/modernizr.js"></script-->
 
 </head>
