optimize ng repeat perfs

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
   <action-bubble></action-bubble>
 
   <script src="assets/js/foundation.js"></script>
+  <script src="assets/js/templates.js"></script>
   <script src="assets/js/app.js"></script>
 
 </body>
