change file watched in gulpfile

--- a/client/modules/item/item.html
+++ b/client/modules/item/item.html
@@ -4,10 +4,12 @@
   on-context-menu="item.displayContextMenu = !item.displayContextMenu"
   class="item">
 
-  <div zf-action-sheet="" class="item__action-sheet">
-    <div class="item__button--action-sheet" zf-as-button="" title="^"></div>
-    <ng-include src="'modules/item/contextmenu.html'"></ng-include>
+  <div
+    class="item__button--action-sheet"
+    ng-click="item.displayContextMenu = !item.displayContextMenu">
+    ^
   </div>
+  <ng-include src="'modules/item/contextmenu.html'" ng-if="item.displayContextMenu"></ng-include>
 
     <!-- <div class="small-menu row">
       <button
