add basic contextmenu support

--- a/client/modules/item/contextmenu.html
+++ b/client/modules/item/contextmenu.html
@@ -10,9 +10,9 @@
     </li>
   </ul>
 </context-menu> -->
-  <div zf-as-content="" position="bottom">
+<div class="item__contextMenu contextMenu">
   <ul>
-    <li>
+    <li class="contextMenu__action">
       <a
       href="#"
       ng-init="item.showRecipe = false"
@@ -22,7 +22,7 @@
       la recette
       </a>
     </li>
-    <li>
+    <li class="contextMenu__action">
       <a
       href="#"
       class="button alert"
@@ -31,4 +31,4 @@
       </a>
     </li>
   </ul>
-  </div>
+</div>
