add advanced contextMenu support

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,8 @@
 
 <body class="grid-block vertical" ui-mouse-tracking>
 
+  <ng-include src="'modules/query/query.html'"></ng-include>
+
   <ng-view></ng-view>
 
   <action-bubble></action-bubble>
