--- a/client/modules/prices/prices.html
+++ b/client/modules/prices/prices.html
@@ -3,7 +3,10 @@
     class="item item--inline {{item.className}}"
     on-context-menu="item.displayContextMenu = true"
     ng-repeat="item in items track by item._id | orderBy:-item.modified"
-    ng-show="([item.name] | filter:filter).length || !filter"
+    ng-show="
+      ([item.name] | filter:filter).length ||
+      ([item.category] | filter:filter).length ||
+      !filter"
     ng-click="item.selected = true"
     ng-class="{
       'item--selected':item.selected || item.displayContextMenu || item.showRecipe
@@ -25,7 +28,7 @@
     </div>
 
       <rich-context-menu class="item__contextMenu" trigger="item.displayContextMenu">
-        <ng-include src="'modules/item/contextmenu.html'"></ng-include>
+        <ng-include ng-init="model = item" src="'modules/item/contextmenu.html'"></ng-include>
       </rich-context-menu>
       <recipe
         ng-if="item.showRecipe"
