--- a/client/modules/prices/contextmenu.html
+++ b/client/modules/prices/contextmenu.html
@@ -9,7 +9,7 @@
     </li>
     <li
       class="rich-context-menu__action action--delete"
-      ng-click="item.delete($index)">
+      ng-click="deleteItem($index)">
         supprimer
     </li>
   </ul>
