--- a/client/modules/items/items.html
+++ b/client/modules/items/items.html
@@ -9,9 +9,7 @@
         model="item"
         ng-repeat="item in items track by item._id | orderBy:-item.modified"
         ng-show="
-          ([item.name] | filter:filter).length ||
-          ([item.category] | filter:filter).length ||
-          !filter"
+          ([item] | filter:filter).length || !filter"
         postRepeatDirective
         class="stack__element">
       </item>
