--- a/client/modules/query/query.html
+++ b/client/modules/query/query.html
@@ -13,5 +13,6 @@
   <div class="navigation">
     <a class="navigation__link" href="/prices">Prix</a>
     <a class="navigation__link" href="/items">Items</a>
+    <a class="navigation__link" href="/benefits">Bénéfices</a>
   </div>
 </div>
