--- a/client/modules/deck/deck.html
+++ b/client/modules/deck/deck.html
@@ -1,2 +1,3 @@
-<h1>Hello world !</h1>
-<div card="card" ng-repeat="card in deck.cards"></div>
+<div class="page-wrapper__wrapper--inner deck">
+  <div card="card" ng-repeat="card in deck.cards"></div>
+</div>
