--- a/client/modules/sidebar/sidebar.html
+++ b/client/modules/sidebar/sidebar.html
@@ -11,4 +11,17 @@
       <a href="sellin">sellin'</a>
     </li>
   </ul>
+
+  <ul class="sidebar__families filters">
+    <li class="sidebar__family filter">
+      <button>Catégorie</button>
+    </li>
+  </ul>
+
+  <ul class="sidebar__families families">
+    <li class="sidebar__family family">
+      <button>Famille</button>
+    </li>
+  </ul>
+
 </div>
