--- a/client/modules/card/card.html
+++ b/client/modules/card/card.html
@@ -1,4 +1,5 @@
-<div class="card card--{{ card.model.categorySlug }}">
+<div class="card card--{{ card.model.categorySlug }}" ng-click="bigger = !bigger">
+  {{bigger}}
   <h2 class="card__title">{{ card.model.name }}</h2>
   <p class="card__price">{{ card.model.price|currency:'k':0}}</p>
   <p class="card__benef-area" ng-if="card.model.recipe.length">
