--- a/client/modules/deck/deck.html
+++ b/client/modules/deck/deck.html
@@ -1,13 +1,15 @@
 <div class="page-wrapper__wrapper--inner" ng-controller="DeckCtrl as deck">
   <button ng-click="deck.filterCards()"></button>
+  <input type="text" ng-model="deck.query" ng-change="deck.filterCards()">
+  <div isotope elements="deck.cards"><div card="element"></div></div>
 
-  <div class="deck" isotope-container="isotope-container">
+  <!-- <div class="deck" isotope-container="isotope-container">
     <div isotope-item="isotope-item"
       class="deck__card__wrapper--outer card__wrapper--outer"
       ng-repeat="card in deck.cards track by card._id | filter:search"
       ng-show="!search || ([card]).length">
       <div card="card"></div>
     </div>
-  </div>
+  </div> -->
 </div>
 <div >
