--- a/client/modules/card/card.html
+++ b/client/modules/card/card.html
@@ -1,10 +1,32 @@
-<div class="card card--{{ card.model.categorySlug }}" ng-click="card.makeBigger()">
+<div class="card card--{{ ::card.model.categorySlug }}"
+  ng-class="{
+    'bigger': card.model.bigger,
+    'selected': card.selected
+  }"
+  ng-click="card.selected = !card.selected"
+  style="background: hsl({{ card.family.hue }}, 27%, 44%);">
 
-  <h2 class="card__title">{{ card.model.name }}</h2>
-  <p class="card__price">{{ card.model.price|currency:'k':0}}</p>
-  <p class="card__benef-area" ng-if="card.model.recipe.length">
-      <span class="card__benef benef benef--fixe">{{ card.model.price - card.model.cost|currency:'k':0 }}</span>
+  <div class="card__area area--description">
+    <h2 class="card__title">{{ ::card.model.name }}</h2>
+    <p class="card__price">{{ ::card.model.price|currency:'k':0 }}</p>
+  </div>
+
+
+  <p style="
+    background: hsl(
+      {{ ::card.family.hue}},
+      {{ ::card.getSaturation() }}%,
+      {{ ::card.luminosity() }}%
+    );"
+    class="card__area area--benef"
+    ng-if="card.model.recipe.length">
+      <span class="card__benef benef benef--fixe">
+        {{ card.model.price - card.model.cost|currency:'k':0 }}
+      </span>
       |
-      <span class="card__benef benef benef--fixe">{{ (card.model.price / card.model.cost) * 100 - 100| number:0}}%</span>
+      <span class="card__benef benef benef--taux">
+        {{ card.calcTauxBenef()|number:0 }}%
+      </span>
   </p>
+
 </div>
