--- a/client/modules/card/card.html
+++ b/client/modules/card/card.html
@@ -1,31 +1,43 @@
-<div class="card card--{{ ::card.model.categorySlug }}"
+<div class="card card--{{ ::card.model.categorySlug }} [ cursor-pointer ]"
   ng-class="{
     'bigger': card.model.bigger,
-    'selected': card.selected
+    'selected': card.model.selected
   }"
-  ng-click="card.selected = !card.selected"
-  style="background: hsl({{ card.family.hue }}, 27%, 44%);">
+  ng-click="card.model.selected = !card.model.selected"
+  style="
+    background: hsl(
+      {{ ::card.family.hue}},
+      {{ ::card.getSaturation() }}%,
+      {{ ::card.getLuminosity() }}%
+    );">
 
-  <div class="card__area area--description">
-    <h2 class="card__title">{{ ::card.model.name }}</h2>
-    <p class="card__price">{{ ::card.model.price|currency:'k':0 }}</p>
+  <div class="card__area area--description" style="">
+    <h2 class="card__title" >
+      <span style="
+      font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em;">
+        {{ ::card.model.name }}
+      </span>
+    </h2>
+    <p class="card__price">
+      <span style="
+      font-size: {{ card.getPonderedValue({ min: 1, max: 2, disabled: 1 }) }}em;">
+        {{ ::card.model.price|currency:'k':0 }}
+      </span>
+    </p>
   </div>
 
 
   <p style="
-    background: hsl(
-      {{ ::card.family.hue}},
-      {{ ::card.getSaturation() }}%,
-      {{ ::card.luminosity() }}%
-    );"
+    background: hsla({{ card.family.hue }}, 27%, 44%, {{ !card.model.selected }});
+    font-size: {{ card.getPonderedValue({ min: 1.2, max: 2, disabled: 1 }) }}em;"
     class="card__area area--benef"
     ng-if="card.model.recipe.length">
-      <span class="card__benef benef benef--fixe">
-        {{ card.model.price - card.model.cost|currency:'k':0 }}
+      <span class="card__benef benef benef--taux">
+        <span ng-if="card.calcBenefitsRate() > 0">+</span>{{ card.calcBenefitsRate()|number:0 }}%
       </span>
       |
-      <span class="card__benef benef benef--taux">
-        {{ card.calcTauxBenef()|number:0 }}%
+      <span class="card__benef benef benef--fixe">
+        <span ng-if="card.calcBenefits() > 0">+</span>{{ card.calcBenefits()|currency:'k':0 }}
       </span>
   </p>
 
