--- a/client/index.html
+++ b/client/index.html
@@ -34,11 +34,11 @@
       pageScroll: true
     }">
     <div class="height-100"
-      app-view-segment="0"
+      app-view-segment="0">
     </div>
   </div>
 
-  <div class="layout__fab fab"
+  <div class="layout__fab"
     ng-include src="'modules/floatingActionButton/floatingActionButton.html'">
   </div>
 
