--- a/client/modules/deck/deck.html
+++ b/client/modules/deck/deck.html
@@ -1,10 +1,12 @@
 <div class="page-wrapper__wrapper--inner" ng-controller="DeckCtrl as deck">
 
-  <input class="deck__amazingQuery amazingQuery [ fixed ]"
-    type="text"
-    placeholder="Amazing query... search by 'keyword', 'key':'!value' and even by 'key.deepkey'<'value' !"
-    ng-model="deck.query"
-    ng-change="deck.filterCards()">
+  <div class="deck__amazingQuery amazingQuery [ fixed ]">
+    <input class="amazingQuery__input" type="text"
+      placeholder="Amazing query... search by 'keyword', 'key':'!value' and even by 'key.deepkey'<'value' !"
+      ng-model="deck.query"
+      ng-change="deck.filterCards()">
+  </div>
+
 
     <!-- <div amazing-query ng-model="deck.query" class="deck__amazingQuery amazingQuery [ fixed ]"></div> -->
 
