--- a/client/modules/card/card.html
+++ b/client/modules/card/card.html
@@ -6,7 +6,7 @@
   ng-click="card.toggleSelection()"
   style="
     background: hsl(
-      {{ ::card.category | hue }},
+      {{ card.model.category | hue }},
       {{ ::card.getSaturation() }}%,
       {{ ::card.getLuminosity() }}%
     );">
@@ -15,15 +15,30 @@
     <h2 class="card__title" >
       <span style="
       font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em;">
-        {{ ::card.model.name }}
+        {{ card.model.name }}
       </span>
     </h2>
     <p class="card__price">
       <span style="
       font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em;">
-        {{ ::card.model.price|currency:'k':0 }}
+        {{ card.model.price|currency:'k':0 }}
       </span>
     </p>
+  </div>
+
+  <div class="card__recipe recipe" ng-if="card.expanded && card.model.recipe.length">
+
+    <div ng-repeat="dosage in card.model.recipe"
+      class="recipe__dosage dosage"
+      style="background: hsl(
+        {{ (dosage._ingredient.category | hue) || 0}},
+        70%,
+        45%
+      );">
+      <span class="dosage__ingredient ingredient">
+        {{ dosage.quantity }} {{ dosage._ingredient.name }}
+      </span>
+    </div>
   </div>
 
 
@@ -31,7 +46,7 @@
     background: hsla({{ ::card.category | hue }}, 27%, 44%, {{ !card.model.selected }});
     font-size: {{ card.getPonderedValue({ min: 1.2, max: 1.5, disabled: 1 }) }}em;"
     class="card__area area--benef"
-    ng-if="card.model.recipe.length">
+    ng-if="card.model.recipe.length && card.price">
       <span class="card__benef benef benef--taux">
         <span ng-if="card.calcBenefitsRate() > 0">+</span>{{ card.calcBenefitsRate()|number:0 }}%
       </span>
