--- a/client/modules/editor/editor.html
+++ b/client/modules/editor/editor.html
@@ -1,32 +1,49 @@
+<div class="page-wrapper__wrapper--inner">
+
+
+<h2 class="editor__title">Récemments édités</h2>
+
+<div class="deck">
+  <div class="deck__card__wrapper--outer card__wrapper--outer">
+    <div card="editor.newItem" expanded="true"></div>
+  </div>
+  <div class="deck__card__wrapper--outer card__wrapper--outer"
+    ng-repeat="card in editor.savedItems track by card._id">
+    <div card="card" expanded="true"></div>
+  </div>
+</div>
+
 <form
   ng-controller="EditorCtrl"
-  class="create-item-view"
-  name="createItemForm"
-  ng-submit="createItem()"
+  class="editor"
+  name="editorForm"
+  ng-submit="editor.save()"
   editable-form>
 
+  <h2 class="editor__title">En cours d'édition</h2>
+
   <input
-    class="modal__input"
+    class="editor__input"
     type="text"
     placeholder="Nom de l'ingrédient"
-    ng-model="newItem.name"
-    ng-change="addChildIngredient()"
-    focus-me="focus == 'name'">
+    ng-model="editor.newItem.name"
+    ng-change="editor.addChildIngredient()"
+    focus-me="editor.focus == 'name'">
 
   <input
-    class="modal__input"
+    class="editor__input"
     type="text"
-    placeholder="Type"
-    ng-model="newItem.type">
+    placeholder="Prix"
+    ng-model="editor.newItem.price">
 
   <input
-    class="modal__input"
+    class="editor__input"
     type="text"
     placeholder="Catégorie"
-    ng-change="addChildIngredient()"
-    ng-model="newItem.category">
+    ng-change="editor.addChildIngredient()"
+    ng-model="editor.newItem.category">
 
-  <recipe model="newItem.recipe"></recipe>
+  <recipe model="editor.newItem.recipe"></recipe>
 
   <button
     type="submit"
@@ -35,3 +52,14 @@
   </button>
 
 </form>
+
+
+<h2 class="editor__title" ng-if="editor.newDependencies.length">Nouvelles dépendances</h2>
+<div class="deck">
+  <div class="deck__card__wrapper--outer card__wrapper--outer"
+    ng-repeat="card in editor.newDependencies track by card._id">
+    <div card="card"></div>
+  </div>
+</div>
+
+</div>
