--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Trophy Manager for Dofus</title>
 
-  <link rel="stylesheet" href="assets/css/app.css">
+  <link rel="stylesheet" href="/assets/css/app.css">
   <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   <!--script src="assets/scripts/vendor/modernizr.js"></script-->
 
@@ -23,7 +23,7 @@
   on-keyboard-closing="hideOverlays = false">
 
   <div class="layout__sidebar sidebar [ left ]"
-    ng-include src="'modules/sidebar/sidebar.html'">
+    ng-include src="'/modules/sidebar/sidebar.html'">
   </div>
 
   <div class="layout__page-wrapper page-wrapper height-100"
@@ -39,12 +39,12 @@
   </div>
 
   <div class="layout__fab"
-    ng-include src="'modules/floatingActionButton/floatingActionButton.html'">
+    ng-include src="'/modules/floatingActionButton/floatingActionButton.html'">
   </div>
 
-  <script src="assets/js/foundation.js"></script>
-  <script src="assets/js/templates.js"></script>
-  <script src="assets/js/app.js"></script>
+  <script src="/assets/js/foundation.js"></script>
+  <!-- <script src="/assets/js/templates.js"></script> -->
+  <script src="/assets/js/app.js"></script>
 
 </body>
 
