--- a/client/modules/richContextMenu/richContextMenu.html
+++ b/client/modules/richContextMenu/richContextMenu.html
@@ -1,6 +1,6 @@
 <div
   class="rich-context-menu"
-  style="left:{{position.x}}px; top:{{position.y}}px;"
+  style="left:{{position.x}}px top:{{position.y}}px"
   ng-if="trigger">
   <ng-transclude></ng-transclude>
 </div>
