--- a/client/modules/card/card.html
+++ b/client/modules/card/card.html
@@ -1,26 +1,26 @@
 <div class="card card--{{ ::card.model.categorySlug }} [ cursor-pointer ]"
   ng-class="{
     'bigger': card.bigger,
-    'selected': card.selected
+    'selected': card.isSelected()
   }"
-  ng-click="card.toggleSelection()"
+  ng-click="card.toggleSelection(); card.log(card.isSelected(), card.model.name)"
   style="
     background: hsl(
       {{ card.model.category | hue }},
       {{ ::card.getSaturation() }}%,
       {{ ::card.getLuminosity() }}%
-    );">
+    )">
 
   <div class="card__area area--description" style="">
     <h2 class="card__title" >
       <span style="
-      font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em;">
+      font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em">
         {{ card.model.name }}
       </span>
     </h2>
     <p class="card__price">
       <span style="
-      font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em;">
+      font-size: {{ card.getPonderedValue({ min: 1, max: 1.5, disabled: 1 }) }}em">
         {{ card.model.price|currency:'k':0 }}
       </span>
     </p>
@@ -44,7 +44,7 @@
 
   <p style="
     background: hsla({{ ::card.category | hue }}, 27%, 44%, {{ !card.model.selected }});
-    font-size: {{ card.getPonderedValue({ min: 1.2, max: 1.5, disabled: 1 }) }}em;"
+    font-size: {{ card.getPonderedValue({ min: 1.2, max: 1.5, disabled: 1 }) }}em";
     class="card__area area--benef"
     ng-if="card.model.recipe.length && card.price">
       <span class="card__benef benef benef--taux">
