--- a/client/modules/editor/editor.html
+++ b/client/modules/editor/editor.html
@@ -5,7 +5,7 @@
 
 <div class="deck">
   <div class="deck__card__wrapper--outer card__wrapper--outer">
-    <div card="editor.newItem" expanded="true"></div>
+    <div card="editor.currItem" expanded="true"></div>
   </div>
   <div class="deck__card__wrapper--outer card__wrapper--outer"
     ng-repeat="card in editor.savedItems track by card._id">
@@ -26,7 +26,7 @@
     class="editor__input"
     type="text"
     placeholder="Nom de l'ingrédient"
-    ng-model="editor.newItem.name"
+    ng-model="editor.currItem.name"
     ng-change="editor.addChildIngredient()"
     focus-me="editor.focus == 'name'">
 
@@ -34,16 +34,16 @@
     class="editor__input"
     type="text"
     placeholder="Prix"
-    ng-model="editor.newItem.price">
+    ng-model="editor.currItem.price">
 
   <input
     class="editor__input"
     type="text"
     placeholder="Catégorie"
     ng-change="editor.addChildIngredient()"
-    ng-model="editor.newItem.category">
+    ng-model="editor.currItem.category">
 
-  <recipe model="editor.newItem.recipe"></recipe>
+  <recipe model="editor.currItem.recipe"></recipe>
 
   <button
     type="submit"
