--- a/client/modules/recipe/recipe.html
+++ b/client/modules/recipe/recipe.html
@@ -6,11 +6,11 @@
       {{ ::dosage._ingredient.category | hue}},
       70%,
       45%
-    );"
+    )"
     ng-class="dosage._ingredient.className">
     <input type="number" ng-model="dosage.quantity" class="input input--quantity dosage__quantity">
     <span class="dosage__ingredient">{{::dosage._ingredient.name}}</span>
-    <span>&nbsp;<b ng-click="removeIngredient($index)" class="dosage__delete-button button--delete">X</b></span>
+    <span>&nbsp<b ng-click="removeIngredient($index)" class="dosage__delete-button button--delete">X</b></span>
   </div>
   <div class="ingredient__name small-12">
     <auto-complete
