--- a/client/modules/item/item.html
+++ b/client/modules/item/item.html
@@ -5,7 +5,7 @@
   ng-show="isVisible()"
   on-context-menu="openContextMenu()"
   ng-click="selectItem()"
-  class="item {{className}} item--inline">
+  class="item item--inline">
 
   <form
     editable-form name="itemForm"
