--- a/client/modules/sidebar/sidebar.html
+++ b/client/modules/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar__wrapper--inner" ng-controller="SidebarCtrl as sidebar">
-  <h1>dft manager</h1>
+  <h1><a href="/">dft manager</a></h1>
   <ul class="sidebar__swaps swaps">
     <li class="sidebar__swap swap [ cursor-pointer ]">
       <a href="all-in">all-in</a>
