--- a/client/modules/recipe/recipe.html
+++ b/client/modules/recipe/recipe.html
@@ -21,7 +21,7 @@
   <div class="ingredient__name small-12">
     <auto-complete
       class="input input--text input--autocomplete"
-      url="/api/search/items"
+      url="/item/name"
       placeholder="Ingrédient">
     </auto-complete>
   </div>
