gestion des stocks

--- a/client/modules/card/card.html
+++ b/client/modules/card/card.html
@@ -11,6 +11,9 @@
       {{ ::card.getLuminosity() }}%
     )">
 
+<div ng-if="card.model.deck">< o ></div>
+{{card.model._deck}}
+
   <div class="card__area area--description" style="">
     <h2 class="card__title" >
       <span style="
