--- a/client/modules/sidebar/sidebar.html
+++ b/client/modules/sidebar/sidebar.html
@@ -1,6 +1,17 @@
 <div class="sidebar__wrapper--inner" ng-controller="SidebarCtrl as sidebar">
-  <h1><a href="/">dft manager</a></h1>
-  <ul class="sidebar__swaps swaps">
+  <h1 class="logo"><a href="/">dft<br>ma<br>na<br>ger</a></h1>
+  <ul class="sidebar__links links">
+    <li class="sidebar__link link">
+      <a href="/stocks">Stocks</a>
+    </li>
+    <li class="sidebar__link link">
+      <a href="/all-in">Tout voir</a>
+    </li>
+    <li class="sidebar__link link">
+      <a href="/create">Éditeur</a>
+    </li>
+  </ul>
+  <!-- <ul class="sidebar__swaps swaps">
     <li class="sidebar__swap swap [ cursor-pointer ]">
       <a href="all-in">all-in</a>
     </li>
@@ -22,6 +33,6 @@
     <li class="sidebar__family family">
       <button>Famille</button>
     </li>
-  </ul>
+  </ul> -->
 
 </div>
