--- a/client/modules/stocks/stocks.html
+++ b/client/modules/stocks/stocks.html
@@ -1,3 +1,8 @@
-<div ng-repeat="deck in stocks.decks" class="deck">
-    <div class="deck__card" ng-repeat="card in deck.cards track by card._id" card="card"></div>
+<div ng-repeat="deckName in stocks.deckNames" class="deck deck--vertical">
+  <div class="deck__head">
+    <button ng-click="stocks.moveToDeck(deckName, -1)"><--</button>
+    <p>{{stocks[deckName].name}} => {{stocks.getDeckBenef(deckName)}}</p>
+    <button ng-click="stocks.moveToDeck(deckName, +1)">--></button>
+  </div>
+  <div class="deck__card" ng-repeat="card in stocks[deckName].cards" card="card">card</div>
 </div>
