--- a/client/modules/recipe/recipe.autocomplete.html
+++ b/client/modules/recipe/recipe.autocomplete.html
@@ -6,13 +6,16 @@
     ng-keydown="checkKeyDown($event)"
     ng-model="searchText"
     ng-change="search()">
-  <ul class="suggestions-list">
+  <ul class="suggestions-list" ng-show="showSuggestions">
     <li
       ng-repeat="suggestion in suggestions"
       class="suggestion"
+      ng-class="{
+        'suggestion--highlighted' : $parent.selectedIndex == $index
+      }"
       style="background: hsl(
         {{ ::suggestion.category | hue}},
-        70%,
+        {{($index == $parent.selectedIndex) ? 90 : 50}}%,
         45%
       )"
       ng-click="addToModel($index)"
